# applechess

./: .buildinfo  .gitignore  LICENSE  README.md  api.html  genindex.html  index.html  main.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  usage.html
.github/workflows/: build_sphinx.yml
_sources/: index.rst.txt
applechess/: __init__.py  analysis.py  chess_agent.py  chess_environ.py  exceptions.py  lichess_bot.py  train_agent.py  utils.py
applechess/data/: metrics.csv
docs/source/: api.rst  conf.py  usage.md
